WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97456
MediaStream API: Fix the incorrectly spelled RTCPeerConnection::onnegotiationneeded callback
https://bugs.webkit.org/show_bug.cgi?id=97456
Summary
MediaStream API: Fix the incorrectly spelled RTCPeerConnection::onnegotiation...
Tommy Widenflycht
Reported
2012-09-24 08:21:06 PDT
Rename onnegotationneeded to onnegotiationneeded.
Attachments
Patch
(5.90 KB, patch)
2012-09-24 08:38 PDT
,
Tommy Widenflycht
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tommy Widenflycht
Comment 1
2012-09-24 08:38:09 PDT
Created
attachment 165389
[details]
Patch
WebKit Review Bot
Comment 2
2012-09-24 11:56:01 PDT
Comment on
attachment 165389
[details]
Patch Clearing flags on attachment: 165389 Committed
r129397
: <
http://trac.webkit.org/changeset/129397
>
WebKit Review Bot
Comment 3
2012-09-24 11:56:05 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug