MediaStream API: Fix the incorrectly spelled RTCPeerConnection::onnegotiationneeded callback https://bugs.webkit.org/show_bug.cgi?id=97456

Reviewed by Adam Barth.

Renamed onnegotationneeded to onnegotiationneeded.

Source/WebCore:

Existing test updated.

* Modules/mediastream/RTCPeerConnection.cpp:
(WebCore::RTCPeerConnection::negotiationNeeded):
* Modules/mediastream/RTCPeerConnection.h:
(RTCPeerConnection):
* Modules/mediastream/RTCPeerConnection.idl:
* dom/EventNames.h:
(WebCore):

LayoutTests:

* fast/mediastream/RTCPeerConnection-onnegotiationneeded-expected.txt:
* fast/mediastream/RTCPeerConnection-onnegotiationneeded.html:


Canonical link: https://commits.webkit.org/115425@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129397 268f45cc-cd09-0410-ab3c-d52691b4dbfc